codemonkeybank-app/templates/codemonkeybank-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: codemonkeybank-webapp
 namespace: cmb
spec:
 replicas: 1
 selector:
   matchLabels:
     app: codemonkeybank-webapp
 template:
   metadata:
     labels:
       app: codemonkeybank-webapp
   spec:
     containers:
     - name: codemonkeybank-container
       image: ghcr.io/tinsve/codemonkeybank:dd9e3c94992703b593e760672c0021cdfc66406c
       ports:
       - containerPort: 80
