codemonkeybank-app/templates/codemonkeybank-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: codemonkeybank-service
 namespace: cmb
spec:
 selector:
   app: codemonkeybank-webapp
 ports:
 - protocol: TCP
   port: 80
   targetPort: 80
